Minor z-index bug fix

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     max-width:100%;
+    z-index: 100;
 }
 
 .nav-wrapper {
@@ -309,6 +310,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     opacity: 0.3;
+    z-index: 0;
     margin: 0 8px 0 16px;
 }
 
